--- a/index.pug
+++ b/index.pug
@@ -14,7 +14,7 @@ html(lang="en")
       tr(class="show-in-browser")
         td(class="content.gray-bg")
           span
-            a(href="https://jic.cz", class="gray-text", mc:edit) Zobrazte si newsletter v prohlížeči
+            a(href="*|ARCHIVE|*", class="gray-text", mc:edit="show-in-browser") Zobrazte si newsletter v prohlížeči
       tr
         td
           table(class="hero")
@@ -22,14 +22,14 @@ html(lang="en")
               td.logo
                 img(src=`${apiUrl}/images/jic-logo.png`)
               td.date.content
-                span(class="caption", mc:edit) květen 2022
+                span(class="caption", mc:edit="date") květen 2022
             tr
               td(colspan="2", class="content hero-content layout")
-                h1(mc:edit) Září patří Velvet Innovation 
-                p(class="body-text", mc:edit) Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek
-                h4(class="body-header", mc:edit) Top výběr z newsletteru
+                h1(mc:edit="hero-header") Září patří Velvet Innovation 
+                p(class="body-text", mc:edit="hero-perex") Jedno místo, stovky inspirativních osobností a spousta skvělých přednášek
+                h4(class="body-header", mc:edit="hero-subheader") Top výběr z newsletteru
                 ul
-                  li(mc:repeatable) Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum
+                  li(mc:repeatable, mc:edit="hero-bullet") Hanka Šudáková si do JICtalku pozvala Jirku Kobelku z Tatum
       tr
         td(class="layout")
           table(class="section")
@@ -40,29 +40,29 @@ html(lang="en")
               td(class="section-body")
                 table(class="grid")
                   tr
-                    td(class="grid-item-big", colspan="2")
-                      a(href="https://jic.cz", mc:edit)
-                        img(src=`${apiUrl}/images/placeholder.png`, mc:edit)
+                    td(class="grid-item-big", colspan="2", mc:edit="magazine-big-item")
+                      a(href="https://jic.cz")
+                        img(src=`${apiUrl}/images/placeholder.png`)
                         div(class="content")
-                          span(class="tag", mc:edit) jic talk
-                          h1(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          span(class="tag") jic talk
+                          h1 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   tr(mc:repeatable)
-                    td(class="grid-item-small")
+                    td(class="grid-item-small", mc:edit="magazine-items-col-1")
                       a(href="https://jic.cz")
                         div(class="content")
-                          span(class="tag", mc:edit) jic talk
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                    td(class="grid-item-small", mc:hideable)
+                          span(class="tag") jic talk
+                          h4 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                    td(class="grid-item-small", mc:edit="magazine-items-col-2")
                       a(href="https://jic.cz")
                         div(class="content")
-                          span(class="tag", mc:edit) jic talk
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          span(class="tag") jic talk
+                          h4 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   tr
                     td(colspan="2")
-                      a(class="btn", href="https://jic.cz") 
+                      a(class="btn", href="https://www.jic.cz/magazin/") 
                         img(src=`${apiUrl}/images/btn-all-articles.png`)
           table(class="section")
             tr
@@ -72,38 +72,38 @@ html(lang="en")
               td(class="section-body")
                 table(class="grid")
                   tr
-                    td(class="grid-item-big", colspan="2")
+                    td(class="grid-item-big", colspan="2", mc:edit="events-big")
                       a(href="https://jic.cz")
-                        img(src=`${apiUrl}/images/placeholder.png`, mc:edit)
+                        img(src=`${apiUrl}/images/placeholder.png`)
                         div(class="content")
-                          span(class="tag jic talk", mc:edit)
-                          h1(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                          div(class="info-tags", mc:edit)
+                          span(class="tag") jic talk
+                          h1 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          div(class="info-tags")
                             span 19. 2. 2022, 19 – 21 hod.
                             span brno-medlánky
                   tr(mc:repeatable)
-                    td(class="grid-item-small")
+                    td(class="grid-item-small", mc:edit="events-items-col-1")
                       a(href="https://jic.cz")
                         div(class="content")
-                          span(class="tag", mc:edit) jic talk
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          span(class="tag") jic talk
+                          h4 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                           div(class="info-tags")
-                            span(mc:edit, mc-repeatable) 19. 2. 2022, 19 – 21 hod.
-                            span(mc:edit, mc-repeatable) brno-medlánky
-                    td(class="grid-item-small", mc:hideable)
+                            span 19. 2. 2022, 19 – 21 hod.
+                            span brno-medlánky
+                    td(class="grid-item-small", mc:edit="events-items-col-2")
                       a(href="https://jic.cz")
                         div(class="content")
-                          span(class="tag", mc:edit) jic talk
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          span(class="tag") jic talk
+                          h4 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                           div(class="info-tags")
-                            span(mc:edit, mc-repeatable) 19. 2. 2022, 19 – 21 hod.
-                            span(mc:edit, mc-repeatable) brno-medlánky
+                            span 19. 2. 2022, 19 – 21 hod.
+                            span brno-medlánky
                   tr
                     td(colspan="2")
-                      a(class="btn", href="https://jic.cz") 
+                      a(class="btn", href="https://www.jic.cz/akce/") 
                         img(src=`${apiUrl}/images/btn-all-events.png`)
           table(class="section")
             tr
@@ -114,22 +114,9 @@ html(lang="en")
                 table(class="grid")
                   tr
                     td(class="pelmel", colspan="2")
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Kiwi se vrací do hry
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Musk koupil Twitter
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Smartlook jde za moře
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Solitea zase nakupuje
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Kiwi se vrací do hry
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Musk koupil Twitter
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Smartlook jde za moře
-                      a(href="https://jic.cz") 
-                        h4(mc:edit, mc:repeatable) Solitea zase nakupuje
+                      div(mc:edit="pelmel-item-1")
+                        a(href="https://jic.cz") 
+                          h4 Kiwi se vrací do hry
           table(class="section")
             tr
               td
@@ -137,22 +124,12 @@ html(lang="en")
             tr
               td(class="section-body margin")
                 table(class="grid")
-                  tr
+                  tr(mc:repeatable)
                     td(class="content")
-                      div(mc:repeatable)
+                      div(mc:edit="startup-item-1")
                         a(class="startup-item", href="https://jic.cz")
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                        hr(class="divider")
-                      div(mc:repeatable)
-                        a(class="startup-item", href="https://jic.cz")
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
-                        hr(class="divider")
-                      div(mc:repeatable)
-                        a(class="startup-item", href="https://jic.cz")
-                          h4(mc:edit) Nadpis lorem ipsum
-                          p(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                          h4 Nadpis lorem ipsum
+                          p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                         hr(class="divider")
           table(class="section")
             tr
@@ -162,32 +139,32 @@ html(lang="en")
               td(class="section-body")
                 table(class="grid")
                   tr
-                    td.advices
-                      img(src=`${apiUrl}/images/placeholder.png`, class="human" mc:edit)
+                    td(class="advices", mc:edit="human")
+                      img(src=`${apiUrl}/images/placeholder.png`, class="human")
                       div(class="quote content")
-                        img(src=`${apiUrl}/images/quotes.png`, class="quotes", mc:edit)
-                        p(class="big", mc:edit) Lorem ipsum (zkráceně lipsum) je označení pro standardní pseudolatinský text užívaný v grafickém designu a navrhování jako demonstrativní výplňový text při vytváření pracovních ukázek grafických návrhů (např. internetových stránek, rozvržení časopisů či všech druhů reklamních materiálů). Lipsum tak pracovně znázorňuje text v ukázkových maketách (tzv. mock-up) předtím, než bude do hotového návrhu vložen smysluplný obsah. 
-                        h3(mc:edit) Petr Chládek
-                        span(mc:edit) Ředitel JIC
+                        img(src=`${apiUrl}/images/quotes.png`, class="quotes")
+                        p(class="big") Lorem ipsum (zkráceně lipsum) je označení pro standardní pseudolatinský text užívaný v grafickém designu a navrhování jako demonstrativní výplňový text při vytváření pracovních ukázek grafických návrhů (např. internetových stránek, rozvržení časopisů či všech druhů reklamních materiálů). Lipsum tak pracovně znázorňuje text v ukázkových maketách (tzv. mock-up) předtím, než bude do hotového návrhu vložen smysluplný obsah. 
+                        h3 Petr Chládek
+                        span Ředitel JIC
       tr
         td(class="generic-content")
           table
-            tr(mc:hideable)                
-              td(class="layout")
+            tr(mc:hideable, mc:repeatable)                
+              td(class="layout", mc:edit="blockquote")
                 a(href="https://jic.cz", class="blockquote") 
                   h2(mc:edit) Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   div(class="btn") 
                     img(src=`${apiUrl}/images/btn-learn-more.png`)
-            tr(mc:hideable)                
-              td(class="layout")
+            tr(mc:hideable, mc:repeatable)                
+              td(class="layout", mc:edit="image-text-block")
                 a(href="https://jic.cz", class="figure-banner") 
                   div(class="content")
                     h1 Nadpis textového bloku
                     p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
                   div(class="btn") 
                     img(src=`${apiUrl}/images/btn-learn-more.png`)
-            tr(mc:hideable)
-              td(class="layout")
+            tr(mc:hideable, mc:repeatable)
+              td(class="layout", mc:edit="text-block")
                 a(href="https://jic.cz", class="figure-banner") 
                   img(src=`${apiUrl}/images/placeholder.png`)
                   div(class="content")
@@ -199,26 +176,26 @@ html(lang="en")
         td.footer
           img(src=`${apiUrl}/images/header-footer.png`, class="section-header")
           div(class="section-body margin")
-            p(mc:edit) Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
-              a(href="https://jic.cz") marketing@jic.cz
+            p(mc:edit="cta") Chceš vědět víc o tom, co děláme? Mrkněte na naše webovky nebo nám napište na 
+              a(href="mailto: marketing@jic.cz") marketing@jic.cz
             table(class="socials")
               tr
                 td
-                  a(href="https://jic.cz") 
+                  a(href="https://www.facebook.com/jic.brno") 
                     img(src=`${apiUrl}/images/fb-dark-cutted.png`)
                 td
-                  a(href="https://jic.cz") 
+                  a(href="https://www.linkedin.com/company/jic-brno/") 
                     img(src=`${apiUrl}/images/in-dark.png`)
                 td
-                  a(href="https://jic.cz") 
+                  a(href="https://www.instagram.com/jic_brno/") 
                     img(src=`${apiUrl}/images/ig-dark.png`)
                 td
-                  a(href="https://jic.cz") 
+                  a(href="https://www.youtube.com/user/JICbrno") 
                     img(src=`${apiUrl}/images/yt-dark.png`)
                 td
-                  a(href="https://jic.cz") 
+                  a(href="https://twitter.com/JIC_Brno") 
                     img(src=`${apiUrl}/images/tw-dark.png`)
-  a(href="https://jic.cz", class="unsub violet-text", mc:edit) Pro odhlášení z odběru newsletteru klikněte zde
+  a(href="*|UNSUB|*", class="unsub violet-text", mc:edit="unsub") Pro odhlášení z odběru newsletteru klikněte zde
 
 
 
