--- a/components.css
+++ b/components.css
@@ -161,6 +161,10 @@ table {
   width: 60px;
   height: 60px;
 }
+.space.tag {
+  width: 10px;
+  height: 30px;
+}
 
 /* TOPBAR */
 .show-in-browser td {
