--- a/index.pug
+++ b/index.pug
@@ -71,19 +71,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h1 Nadpis lorem ipsum
                                 br
@@ -98,19 +90,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h4 Nadpis lorem ipsum
                                 br
@@ -121,19 +105,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h4 Nadpis lorem ipsum
                                 br
@@ -161,19 +137,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h1 Nadpis lorem ipsum
                                 br
@@ -192,19 +160,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h4 Nadpis lorem ipsum
                                 br
@@ -219,19 +179,11 @@ html(lang="en")
                                 table(class="tag") 
                                   tr
                                     td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
-                                    td
-                                    td
-                                  tr
-                                    td
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                     td
                                       span jic talk
                                     td
-                                  tr
-                                    td
-                                    td
-                                    td
-                                      img(src=`${apiUrl}/images/spaces/xs.png`, class="space xs")
+                                      img(src=`${apiUrl}/images/spaces/tag-space.png`, class="space tag")
                                 br
                                 h4 Nadpis lorem ipsum
                                 br
@@ -251,6 +203,9 @@ html(lang="en")
                   tr
                     td
                       img(src=`${apiUrl}/images/header-pelmel.png`, class="section-header")
+                  tr 
+                    td
+                      img(src=`${apiUrl}/images/spaces/xxl.png`, class="space xxl")
                   tr
                     td(class="section-body margin")
                       table(class="grid")
@@ -259,6 +214,9 @@ html(lang="en")
                             div(mc:edit="pelmel-item-1")
                               a(href="https://jic.cz") 
                                 h4 Kiwi se vrací do hry
+                  tr 
+                    td
+                      img(src=`${apiUrl}/images/spaces/xxl.png`, class="space xxl")                                
                 table(class="section")
                   tr
                     td
@@ -269,9 +227,12 @@ html(lang="en")
                         tr(mc:repeatable)
                           td(class="content")
                             div(mc:edit="startup-item-1")
+                              img(src=`${apiUrl}/images/spaces/xl.png`, class="space xl")                                 
                               a(class="startup-item" href="https://jic.cz")
                                 h4 Nadpis lorem ipsum
+                                br
                                 p Jsme inovační agentura a poskytujeme služby vedoucí k podpoře podnikatelů a studentů s touhou podnikat.
+                              img(src=`${apiUrl}/images/spaces/xl.png`, class="space xl")                                 
                               hr(class="divider")
                 table(class="section")
                   tr
