--- a/components.css
+++ b/components.css
@@ -21,19 +21,16 @@ u + .body .diff {
 }
 
 img {
-  width: 100%;
   height: auto;
   object-fit: contain;
   display: block;
 }
 
 table {
-  width: 100%;
   border-spacing: 0;
 }
 
 .layout {
-  /* padding: 0 10px; */
 }
 
 /* TYPO */
@@ -90,7 +87,8 @@ table {
   font-weight: bold;
 }
 
-.content span {
+.content span,
+.content div {
   font-size: 10px;
   line-height: 1.2em;
   font-weight: bold;
@@ -130,8 +128,12 @@ table {
 }
 
 /* SPACES */
+br {
+  line-height: 50%;
+}
 
 .space {
+  display: block;
 }
 .space.xs {
   width: 5px;
@@ -168,7 +170,6 @@ table {
 
 /* TOPBAR */
 .show-in-browser td {
-  /* padding: 7px 0 12px; */
   text-align: center;
 }
 
@@ -192,23 +193,20 @@ table {
 }
 
 .hero-header td {
-  /* padding-top: 30px;
-  padding-bottom: 30px;
-  padding-left: 10px;
-  padding-right: 10px; */
 }
 
 .hero-content > * {
-  /* padding: 10px 0; */
 }
 .hero-content {
-  /* padding-bottom: 30px; */
 }
 
 /* GRID */
 .grid-item-big,
 .grid-item-small {
-  /* padding-bottom: 40px; */
+}
+
+.grid-item-small {
+  width: 290px;
 }
 
 .grid-item-big a {
@@ -218,12 +216,10 @@ table {
 
 .grid-item-big h1 {
   text-decoration: underline;
-  /* margin-bottom: 10px; */
 }
 
 .grid-item-big .cover {
-  /* margin-bottom: 20px; */
-  width: 100% !important;
+  width: 600px !important;
   height: auto !important;
 }
 
@@ -234,7 +230,6 @@ table {
 
 .grid-item-small h4 {
   text-decoration: underline;
-  /* margin-bottom: 10px; */
 }
 
 .grid-item-small a {
@@ -244,10 +239,7 @@ table {
 /* BTNS & TAGS */
 .tag {
   background-color: #502882;
-  /* display: inline-block; */
   width: auto;
-  /* padding: 5px 5px 3px;
-  margin-bottom: 15px; */
   text-transform: uppercase;
 }
 .tag span {
@@ -255,7 +247,6 @@ table {
 }
 
 .info-tags {
-  /* padding-top: 10px; */
 }
 
 .info-tags span {
@@ -263,7 +254,6 @@ table {
 }
 
 .generic-content {
-  /* padding: 30px 0; */
 }
 
 .btn {
@@ -274,14 +264,11 @@ table {
 
 .btn img {
   display: block;
-  height: 100%;
   height: 33px;
   object-fit: contain;
-  width: auto;
 }
 
 a.btn-secondary {
-  /* padding: 5px 10px; */
   display: inline;
   text-decoration: none;
   border: 1px solid #502882;
@@ -292,39 +279,29 @@ a.btn-secondary {
 a.btn-secondary img {
   width: 6px;
   display: inline-block;
-  /* margin-left: 10px; */
 }
 
 /* SECTION */
 .section {
-  /* padding-bottom: 10px; */
 }
 
 .section:last-child {
-  /* padding-bottom: 0; */
 }
 
 .section-body {
-  /* padding: 30px 10px 50px; */
-  /* padding-top: 10px; */
 }
 
 .section-body.margin {
-  /* padding-top: 30px; */
 }
 
 .section-noise {
-  /* margin-bottom: -2px; */
 }
 
 .section-header {
-  width: auto;
-  width: 100%;
-  /* margin-bottom: 40px; */
+  width: 600px;
 }
 
 .section-header-outer {
-  /* padding: 20px 10px; */
 }
 
 /* STARTUP */
@@ -337,7 +314,6 @@ a.btn-secondary img {
 }
 
 .startup-item h4 {
-  /* padding-bottom: 10px; */
   text-decoration: underline;
 }
 
@@ -350,25 +326,19 @@ a.btn-secondary img {
   background-color: #502882;
   height: 1px;
   border: 0;
-  /* margin: 20px 0; */
 }
 .divider:last-child {
   opacity: 0;
-  /* margin-top: 0; */
 }
 .divider:first-child {
-  /* margin-top: 0; */
 }
 
 /* QUOTES */
 .quote .quotes {
-  /* margin-bottom: 20px;
-  margin-top: 30px; */
   width: 24px;
 }
 
 .quote h3 {
-  /* margin-top: 20px; */
 }
 
 .blockquote {
@@ -377,7 +347,6 @@ a.btn-secondary img {
 }
 
 .blockquote h2 {
-  /* margin-bottom: 20px; */
 }
 
 /* FIGURE BANNER */
@@ -387,37 +356,31 @@ a.btn-secondary img {
 }
 
 .generic-content td {
-  /* padding-top: 30px;
-  padding-bottom: 30px; */
 }
 
-.figure-banner > img {
+.figure-banner .cover {
   margin-bottom: 10px;
-  width: 100% !important;
+  width: 600px !important;
   height: auto !important;
 }
 
 .figure-banner h1 {
   text-decoration: underline;
-  /* margin-bottom: 10px; */
 }
 
 .figure-banner .btn {
-  /* margin-top: 20px; */
 }
 
 /* FOOTER */
-.footer {
-  /* padding: 0 10px; */
+.footer p {
+  width: 90%;
 }
 
 .footer > div {
-  /* padding: 30px 10px; */
 }
 
 .socials {
   width: 130px;
-  /* margin-top: 30px; */
 }
 
 .socials img {
@@ -427,15 +390,12 @@ a.btn-secondary img {
 .unsub {
   font-size: 11px;
   display: block;
-  /* margin: 20px 0; */
-  /* padding-left: 20px; */
 }
 
 .pelmel h4 {
-  /* padding: 0.25em 0; */
 }
 
 .advices .human {
-  width: 100% !important;
+  width: 600px !important;
   height: auto !important;
 }
